--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
 
-    <script>
-      // Your web app's Firebase configuration
+    
+      
+      <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAoSxnJNJo4gYmA3apvWdVKeyeC8UzQNe4",
+    authDomain: "c34-carracing-35b11.firebaseapp.com",
+    databaseURL: "https://c34-carracing-35b11.firebaseio.com",
+    projectId: "c34-carracing-35b11",
+    storageBucket: "c34-carracing-35b11.appspot.com",
+    messagingSenderId: "510488049684",
+    appId: "1:510488049684:web:e95f9c738a7687558c0f01",
+    measurementId: "G-66769SEJJ0"
+  };
+  // Initialize Firebase
+ 
       //Add here
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
